@@ -29,9 +29,8 @@ import TopBar from './TopBar.vue'
 
 @media screen and (max-width: 1000px) {
   .chart-builder {
+    height: 100%;
     width: 100%;
-    height: 50dvh;
-    max-height: 50dvh;
     overflow-y: auto;
   }
 
